Feature: Add location field to concerts and optimize design for less vertical space
- Add 'Luogo' field from Notion to concerts display
- Reduce section padding from 4rem to 2rem
- Optimize hero section height from 100vh to 70vh
- Compress concert cards with better spacing
- Add specific styling for location, city, and time
- Reduce font sizes and margins throughout

--- a/index.html
+++ b/index.html
@@ -144,9 +144,10 @@
                             <span class="month">${concert.month}</span>
                         </div>
                         <div class="details">
-                            <h3>${concert.venue}${concert.city ? ' - ' + concert.city : ''}</h3>
-                            ${concert.address ? `<p>${concert.address}</p>` : ''}
-                            <p>Ore ${concert.time}</p>
+                            <h3>${concert.venue}</h3>
+                            ${concert.location ? `<p class="location">${concert.location}</p>` : ''}
+                            ${concert.city ? `<p class="city">${concert.city}</p>` : ''}
+                            <p class="time">Ore ${concert.time}</p>
                             ${concert.notes ? `<p class="notes">${concert.notes}</p>` : ''}
                         </div>
                     </div>
