Fix: Remove debug logging and add cache busting for concerts
- Clean up debug console logs from fetch script
- Add timestamp query parameter to force browser cache refresh
- Ensure latest concert data with locations is displayed

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             const concertList = document.getElementById('concert-list');
             
             try {
-                const response = await fetch('data/concerts.json');
+                const response = await fetch(`data/concerts.json?v=${Date.now()}`);
                 
                 if (!response.ok) {
                     throw new Error('File concerti non trovato');
